--- a/Application/app/src/main/res/values/strings.xml
+++ b/Application/app/src/main/res/values/strings.xml
@@ -28,8 +28,20 @@
     <string name="error_update_bdd">Failed to add users to database</string>
     <string name="title_activity_menu_student">MenuStudentActivity</string>
     <string name="tab_text_1">M\'enregistrer</string>
-    <string name="tab_text_2">Mes présences</string>
+    <string name="tab_text_2_student">Mes absences</string>
+    <string name="tab_text_2_teacher">Mes présences</string>
     <string name="tab_text_3">Mon compte</string>
     <string name="tab_text_4">Exclure un élève</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="send_password">Envoyer le mot de passe</string>
+    <string name="information">
+        1) Passes ta carte NFC près du lecteur pour t\'identifier\n\n
+        2) Tapes le code reçu sur l\'application (attention au timer)\n
+    </string>
+    <string name="information2">
+        3) Cliques sur le bouton pour t\'enregister\n\n
+        4) Voila tu es identifié :)
+    </string>
+    <string name="code">Code</string>
+    <string name="tapes_ton_code_ici">Tapes ton code ici</string>
+
 </resources>
